--- a/source/to_do_list/templates/index.html
+++ b/source/to_do_list/templates/index.html
@@ -2,20 +2,28 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Task List</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 </head>
 <body>
-    <a href="{% url 'task_add' %}">Add task</a>
-    <div style="display: flex; flex-wrap: wrap;">
-        {% for task in tasks %}
-        <div class="card" style="width: 18rem; margin: 10px;">
-            <div class="card-body">
-                <strong>Summary: {{ task.summary }}</strong><br>
-                <strong>Created at: {{ task.created_at }}</strong><br>
-                <a href="#" style="margin-left: 37%">Details</a>
-            </div>
+    <div class="container mt-4">
+        <div class="d-flex justify-content-between align-items-center mb-4">
+            <h1 class="h3">Task List</h1>
+            <a href="{% url 'task_add' %}" class="btn btn-primary">Add Task</a>
         </div>
-        {% endfor %}
+        <div class="row">
+            {% for task in tasks %}
+            <div class="col-md-4 mb-4">
+                <div class="card h-100">
+                    <div class="card-body">
+                        <h5 class="card-title">Summary: {{ task.summary }}</h5>
+                        <p class="card-text">Created at: {{ task.created_at }}</p>
+                        <a href="{% url 'task_detail' task.pk %}" class="btn btn-primary">Details</a>
+                    </div>
+                </div>
+            </div>
+            {% endfor %}
+        </div>
     </div>
 </body>
 </html>
