--- a/source/to_do_list/templates/index.html
+++ b/source/to_do_list/templates/index.html
@@ -1,16 +1,8 @@
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Task List</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-</head>
-<body>
-    <div class="container mt-4">
-        <div class="d-flex justify-content-between align-items-center mb-4">
-            <h1 class="h3">Task List</h1>
-            <a href="{% url 'task_add' %}" class="btn btn-primary">Add Task</a>
-        </div>
+{% extends "base.html" %}
+
+{% block title %}Task List{% endblock %}
+
+{% block content %}
         <div class="row">
             {% for task in tasks %}
             <div class="col-md-4 mb-4">
@@ -24,6 +16,4 @@
             </div>
             {% endfor %}
         </div>
-    </div>
-</body>
-</html>
+{% endblock %}
