--- a/source/to_do_list/templates/task_delete.html
+++ b/source/to_do_list/templates/task_delete.html
@@ -1,11 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Delete Task</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-</head>
-<body>
+{% extends "base.html" %}
+
+{% block title %}Delete Task{% endblock %}
+
+{% block content %}
     <div class="container">
         <h1>Are you sure you want to delete this task?</h1>
         <p>Summary: {{ task.summary }}</p>
@@ -16,5 +13,4 @@
             <a href="{% url 'task_detail' task.pk %}" class="btn btn-secondary">Cancel</a>
         </form>
     </div>
-</body>
-</html>
+{% endblock %}
