--- a/source/to_do_list/templates/task_detail.html
+++ b/source/to_do_list/templates/task_detail.html
@@ -1,11 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Task Detail</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-</head>
-<body>
+{% extends "base.html" %}
+
+{% block title %}Task Detail{% endblock %}
+
+{% block content %}
     <div class="container">
         <h1>Task Detail</h1>
         <p>Summary: {{ task.summary }}</p>
@@ -16,5 +13,4 @@
         <a href="{% url 'task_edit' task.pk %}" class="btn btn-primary">Edit</a>
         <a href="{% url 'task_delete' task.pk %}" class="btn btn-danger">Delete</a>
     </div>
-</body>
-</html>
+{% endblock %}
