--- a/source/to_do_list/templates/task_edit.html
+++ b/source/to_do_list/templates/task_edit.html
@@ -1,11 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Edit Task</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-</head>
-<body>
+{% extends "base.html" %}
+
+{% block title %}Edit Task{% endblock %}
+
+{% block content %}
     <div class="container">
         <h1>Edit Task</h1>
         <form method="post">
@@ -23,5 +20,4 @@
         </form>
         <a href="{% url 'task_detail' task.pk %}" class="btn btn-secondary">Cancel</a>
     </div>
-</body>
-</html>
+{% endblock %}
